js/js.translator/testData/incremental/invalidation/jsCodeWithConstString/lib1/l1.3.kt
internal const val constKey1 = "foo"
internal const val constKey2 = "bar"

internal const val constKey = constKey1 + "_" + constKey2

internal const val constVal = "3"

